2001-02-13  Paolo Maggi  <maggi@athena.polito.it>

	*  document.c (gedit_document_load): stupid bug fixed
	when loading files with escaped name.

2001-02-13  Paolo Maggi  <maggi@athena.polito.it>

	* document.c (gedit_document_get_tab_name)(gedit_document_load)
	(gedit_document_set_title):
	* file.c (gedit_file_open)(gedit_file_save_as)(gedit_file_save)
	(gedit_file_save_as_ok_sel)
	* print.c (print_set_pji):
	* recent.c (gedit_recent_add_menu_item) : added support for 
	escaped file names and URIs

2001-02-13  Paolo Maggi  <maggi@athena.polito.it>

	* file.c (gedit_file_open): now uses g_return_val_if_fail
	instead of g_assert
	(gedit_file_open_ok_sel): now uses g_return_if_fail
	instead of g_assert

	* document.c (gedit_document_load):  now uses
	g_return_val_if_fail instead of g_assert

2001-02-12  Paolo Maggi  <maggi@athena.polito.it>

	* file.c (gedit_file_save_as_ok_sel): remove g_assert
	that crashed gedit when exiting and saving a file.
	(file_save_document): before saving a document raise
	one of its views.
	
	* document.c (remove_child_cb): before removing a mdi child
	raise a view if the document is changed.	
	
2001-02-11  Chema Celorio  <chema@celorio.com>

	* file.c (gedit_file_save_as_ok_sel): remove g_asserts
	that where crashing then exiting gedit and saving a file.

	* view.c (gedit_view_set_tab_size): implement
	(gedit_view_init): call _set_tab_size after creating the gtk_text
	widget.

	* window.c (gedit_window_refresh_all): call set_tab_size

	* prefs.c (gedit_prefs_load_settings): tab size. Save load and
	add to struct.

	* dialogs/dialog-prefs.c (apply_cb): support for tab size

	* window.c (gedit_window_refresh_all): add a tab size changed parameter

	* file.c: remove message to translators

2001-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/dialog-uri.c (open_button_pressed):
	hide dlg before trying to load file from URI

2001-02-07  Paolo Maggi  <maggi@athena.polito.it>
